--- a/iptv.html
+++ b/iptv.html
@@ -144,7 +144,7 @@ OFrWyxI+tteLTJnZKT7Lg8BRYQNXMQU=">A</a></div></td>
     <td width="40"><div align="center">15</div></td>
     <td width="150"><div align="center"><a href="http://www.baitv.com/ext/tvb/tvb1/">翡翠台</a>*</div></td>
     <td width="46"><div align="center"><a href="http://116.199.5.51:8114/00000000/2e368e04c76446bc9d30ca7a9f934dae/index.m3u8?Fsv_cid=1034&amp;Fsv_chan_hls_se_idx=188&amp;Fsv_ctype=LIVES&amp;version=9&amp;Fsv_rate_id=1&amp;Fsv_otype=1&amp;FvSeid=5abd1660af1babb4&amp;Pcontent_id=7f88be5fb6fd426494f6aa240f1dc7a9&amp;Provider_id=00000000&amp;Fsv_filetype=1&amp;Fsv_ShiftEnable=0&amp;Fsv_SV_PARAM1=0&amp;Fsv_ShiftTsp=240&amp;Fsv_CMSID=00000000&amp;AuthInfo=P2ZSH2gNMZ8aiVfV%2BjCYczoGsAYoDo4KY5I3eHfJhGTKdSzgLwCHoSet9it9fXrMLwehJxh9gmO%2F%0AOFrWyxI%2BtteLTJnZKT7Lg8BRYQNXMQU%3D%0A">A</a></div></td>
-    <td width="46"><div align="center"><a href="http://180.76.22.39/rtmp51.kascend.com/chushou_live/e1229c324037401abc99f98c7ecd68c0.lss5774404797152484040.dynamic.m3u8?vhost=rtmp51.kascend.com">B</a></div></td>
+    <td width="46"><div align="center"><a href="http://hdl51-o.kascend.com/chushou_live/e1229c324037401abc99f98c7ecd68c0.flv">B</a></div></td>
     <td width="46"><div align="center"></div></td>
     <td><div align="center"></div></td>
   </tr>
