--- a/vip.html
+++ b/vip.html
@@ -13,16 +13,21 @@ header-img: "img/fm/04.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 <p>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
 
     <title>Video.js | HTML5 Video Player</title>
     <!-- <link href="video-js-6.2.0/video-js.css" rel="stylesheet">
     <script src="video-js-6.2.0/videojs-ie8.min.js"></script> -->
 
-    <link href="http://vjs.zencdn.net/5.20.1/video-js.css" rel="stylesheet">
-    <script src="http://vjs.zencdn.net/5.20.1/videojs-ie8.min.js"></script>
-    
+    <link href="http://vjs.zencdn.net/7.5.3/video-js.css" rel="stylesheet">
+    <link href="http://vjs.zencdn.net/7.5.3/video-js.min.css" rel="stylesheet">  
+    <script src="http://vjs.zencdn.net/7.5.3/video.cjs.js"></script>
+    <script src="http://vjs.zencdn.net/7.5.3/video.es.js"></script>
+    <script src="http://vjs.zencdn.net/7.5.3/video.js"></script>
+    <script src="http://vjs.zencdn.net/7.5.3/video.min.js"></script>
+
 </head>
 <body>
 
