--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/fm/02.jpg"
 <p>
 <body>
 <audio autoplay="autoplay">
-  <source src="https://raw.githubusercontent.com/hbpoon/hbpoon.github.io/master/music/xbx01.mp3" />
+  <source src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI3NjM1NTQ1OV8yMjQ3NTAwNDMw" />
 </audio>
 
 
