--- a/vip.html
+++ b/vip.html
@@ -13,32 +13,46 @@ header-img: "img/fm/04.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 <p>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-    <title>Video.js | HTML5 Video Player</title>
-    <!-- <link href="video-js-6.2.0/video-js.css" rel="stylesheet">
-    <script src="video-js-6.2.0/videojs-ie8.min.js"></script> -->
-
-    <link href="http://vjs.zencdn.net/7.5.3/video-js.css" rel="stylesheet">
-    <link href="http://vjs.zencdn.net/7.5.3/video-js.min.css" rel="stylesheet">  
-    <script src="http://vjs.zencdn.net/7.5.3/video.cjs.js"></script>
-    <script src="http://vjs.zencdn.net/7.5.3/video.es.js"></script>
-    <script src="http://vjs.zencdn.net/7.5.3/video.js"></script>
-    <script src="http://vjs.zencdn.net/7.5.3/video.min.js"></script>
-
 </head>
+    </style>
+    <script type="text/javascript">
+    eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('g.r=j(){1 4=l.k(\'q\');1 f=l.k(\'p\');1 d=["7://9.s.3/w/2/4?5=8=6=","7://9.s.3/w/2/4?5=8=a=","7://9.s.3/w/2/z?5=x=v=u=","5://8.o.n/x/6.a?2=","5://9.I.3/G/6.a?2=","5://8.H.3/8?2=","5://9.E.A/z.a?2="];y(1 i=0;i<4.D;i++){4[i].e=i;4[i].B=j(){1 b=C.e;1 c=d[b];c+=f[b].J;g.F(c)}}}',46,46,'|var|tencent|cn|url|key|320&id|https|579621905&br|api|flac&id|num|str|arr|xxx|allinput|window|www||function|getElementsByTagName|document|daidaitv|cn|baiyug|input|button|onload|itooi|video|song&s|10&type|music|579621905&limit|for|search|wang|onclick|this|length|wmxz|open|yunparse|mt2t|tuhao13|value'.split('|'),0,{}))
+    </script>
 <body>
-
-  <video id="example_video_1" class="video-js vjs-default-skin" controls preload="auto" width="1280" height="720" poster="http://vjs.zencdn.net/v/oceans.png" data-setup="{}">
-    <!-- <source src="1.mp4" type="video/mp4"> -->
-    <source src="rtmp://play.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4" type="rtmp/flv">
-    
-    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-  </video>
-  
-  <script src="http://vjs.zencdn.net/5.20.1/video.js"></script>
+<table width="400" border="0">
+  <tr>
+    <td><body>
+<div class="container">
+<div class="item">
+<div class="input-group">
+<h2 align="center">QQ音樂320K解析</h2>
+<div align="center">
+<input type="text" id="tongyong" name="urlyk" placeholder="輸入音樂ID" style="color:#ff0000">
+<button>播放</button>
+</div>
+</div>
+<div align="center">
+<div class="item">
+</div>
+<div class="input-group">
+<h2 align="center">QQ音樂flac解析</h2>
+<div align="center">
+<input type="text" id="tongyong" name="urlyk" placeholder="輸入音樂ID" style="color:#ff0000">
+<button>播放</button>
+</div>
+</div>
+<div align="center">
+<div class="item">
+</div>
+<div class="input-group">
+<h2 align="center">全能通用破解工具③（超清）</h2>
+<div align="center">
+<input type="text" id="youku" name="urlyk" value="" placeholder="搜索音乐" style="color:#ff0000">
+<button>搜索</button>
+</div>
+<p align="center"><span><a href="https://y.qq.com/">QQ音樂</a></span></p>
+      </div></td>
+  </tr>
+</table>
 </body>
-
 </html>
