--- a/vip.html
+++ b/vip.html
@@ -13,6 +13,10 @@ header-img: "img/fm/04.jpg"
 <!-- Chinese Version -->
 <div class="zh post-container">
 
+
+<p>
+</head>
+
 <body>
 <table width="400" border="0">
   <tr>
