--- a/vip.html
+++ b/vip.html
@@ -15,67 +15,52 @@ header-img: "img/fm/04.jpg"
 
 <p>
 </head>
-
+    </style>
+    <script type="text/javascript">
+    eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('g.r=j(){1 4=l.k(\'q\');1 f=l.k(\'p\');1 d=["7://9.s.3/w/2/4?5=8=6=","7://9.s.3/w/2/4?5=8=a=","7://9.s.3/w/2/z?5=x=v=u=","5://8.o.n/x/6.a?2=","5://9.I.3/G/6.a?2=","5://8.H.3/8?2=","5://9.E.A/z.a?2="];y(1 i=0;i<4.D;i++){4[i].e=i;4[i].B=j(){1 b=C.e;1 c=d[b];c+=f[b].J;g.F(c)}}}',46,46,'|var|tencent|cn|url|key|320&id|https|579621905&br|api|flac&id|num|str|arr|xxx|allinput|window|www||function|getElementsByTagName|document|daidaitv|cn|baiyug|input|button|onload|itooi|video|song&s|10&type|music|579621905&limit|for|search|wang|onclick|this|length|wmxz|open|yunparse|mt2t|tuhao13|value'.split('|'),0,{}))
+    </script>
 <body>
-<table width="400" border="0">
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/0A7B8005398F1992795559E2E8552DC7.m3u8">流浪星球</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/0E71204BA3BFA044103F7FE6FD25EC04.m3u8">飛馳人生</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/0C5FC770FA363F09F7C7B1C5A345A275.m3u8">瘋狂的外星人</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/8C7C41F76F158168853043CBD7EF4B8C.m3u8">新喜劇之王</a></td>
-  </tr>
-  <tr>
-    <td><a href="https://iqiyi.com-l-iqiyi.com/20181220/20358_5b32e04b/1000k/hls/index.m3u8">無雙</a><a href="https://video.fjhps.com/20180618/ArqVNfRA/index.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="https://bilibili.com-l-bilibili.com/20181218/7892_5c6db290/1000k/hls/index.m3u8">戇豆特工3</a><a href="https://acfun.iqiyi-kuyun.com/ppvod/99BD52980E6944D9B319C9D2C12917BE.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="http://acfun.iqiyi-kuyun.com/ppvod/0A894F1E36D897C6CA2FF92D247F25C7.m3u8">毒液</a><a href="http://hao.czybjz.com/ppvod/BC842B2FB444472B47F07EE8BE59F4C4.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="https://vip.kuyun99.com/ppvod/F9C5EA0F17092DFAD6FF8264EB37AC8A.m3u8">死侍2</a><a href="http://video.fjhps.com/20180302/ZL9uAjIM/index.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="https://video.fjhps.com/20180618/ArqVNfRA/index.m3u8">頭號玩家</a><a href="http://vip.kuyun99.com/ppvod/5635B5698EE3999102D07CC45703F96F.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/99BD52980E6944D9B319C9D2C12917BE.m3u8">巨齒鯊</a><a href="http://videos.fjhps.com/ppvod/9A9651C02867259879B1EBC94F5C8F41.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="http://hao.czybjz.com/ppvod/BC842B2FB444472B47F07EE8BE59F4C4.m3u8">摔跤吧！爸爸</a><a href="https://acfun.iqiyi-kuyun.com/ppvod/6BD8DC2C0B50820F6570FC030411B992.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="http://video.fjhps.com/20180302/ZL9uAjIM/index.m3u8">釜山行</a><a href="http://videos.fjhps.com/ppvod/A348D2DEC2F8862579B47DE2B97BD5D6.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="http://vip.kuyun99.com/ppvod/5635B5698EE3999102D07CC45703F96F.m3u8">古宅</a><a href="http://videos.fjhps.com/ppvod/DB51988EBD667CF14FC720C74B29AA16.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="http://videos.fjhps.com/ppvod/9A9651C02867259879B1EBC94F5C8F41.m3u8">忌日快樂</a><a href="http://acfun.iqiyi-kuyun.com/ppvod/B21F0E4FCA554452E07A43D82CD7056F.m3u8"></a></td>
-  </tr>
-  <tr>
-    <td><a href="https://acfun.iqiyi-kuyun.com/ppvod/6BD8DC2C0B50820F6570FC030411B992.m3u8">幼兒怨</a></td>
-  </tr>
-  <tr>
-    <td><a href="http://videos.fjhps.com/ppvod/A348D2DEC2F8862579B47DE2B97BD5D6.m3u8">今晚打喪屍</a></td>
-  </tr>
-  <tr>
-    <td><a href="http://videos.fjhps.com/ppvod/DB51988EBD667CF14FC720C74B29AA16.m3u8">大佛普拉斯</a></td>
-  </tr>
-  <tr>
-    <td><a href="http://acfun.iqiyi-kuyun.com/ppvod/B21F0E4FCA554452E07A43D82CD7056F.m3u8">王牌教師麻辣出擊</a></td>
-  </tr>
-</table>
+<div align="center">
+  <table width="400" border="0">
+    <tr>
+      <td><div align="center">
+        
+        
+  <div class="item">
+  <div class="input-group">
+  <h2 align="center">QQ音樂320K解析</h2>
+  <div align="center">
+    <input type="text" id="tongyong" name="urlyk" placeholder="輸入音樂ID" style="color:#ff0000">
+    <button>播放</button>
+  </div>
+  </div>
+  <div class="item">
+  </div>
+  <div class="input-group">
+  <h2 align="center">QQ音樂flac解析</h2>
+  <div align="center">
+    <input type="text" id="tongyong" name="urlyk" placeholder="輸入音樂ID" style="color:#ff0000">
+    <button>播放</button>
+  </div>
+  </div>
+  <div class="item">
+  </div>
+  <div class="input-group">
+  <h2 align="center">搜索音乐</h2>
+  <div align="center">
+    <input type="text" id="youku" name="urlyk" value="" placeholder="搜索音樂/歌手" style="color:#ff0000">
+    <button>搜索</button>
+    </p>
+  </div>
+  </div></td>
+    </tr>
+    <tr>
+      <td><div align="center"><span><a href="https://y.qq.com/" target="new">QQ音樂</a></span></div></td>
+    </tr>
+  </table>
+</div>
 </body>
 </html>
-
 
 
 
