--- a/music/qqmusic.html
+++ b/music/qqmusic.html
@@ -47,31 +47,32 @@
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 				<div class="site-heading" id="tag-heading">
-					<h2>QQMusic</h2>
-                    <span class="subheading">音樂解析</span>
+					<h1>Music</h1>
+					<span class="subheading">QQ音樂解析</span>
+                    
                       <div class="item">
 
   <div class="item">
   <div class="input-group">
-  <h5 align="left">320K</h5>
-    <input type="text" id="tongyong" name="320K" placeholder="輸入音樂ID" style="color:#31c27c">
+  <h2 align="left">320K</h2>
+    <input type="text" id="tongyong" name="320K" placeholder="輸入音樂ID" style="color:#31c27c;width:250px;">
     <button><div style="color:#000000">播放</div></button>
   </div>
   </div>
   <div class="item">
   </div>
   <div class="input-group">
-  <h5 align="left">FLAC</h5>
+  <h2 align="left">FLAC</h2>
 
-    <input type="text" id="tongyong" name="FLAC" placeholder="輸入音樂ID" style="color:#31c27c">
+    <input type="text" id="tongyong" name="FLAC" placeholder="輸入音樂ID" style="color:#31c27c;width:250px;">
     <button><div style="color:#000000">播放</div></button>
   </div>
   <div class="item">
   </div>
   <div class="input-group">
-  <h5 align="left">搜索音乐</h5>
+  <h2 align="left">搜索音乐</h2>
 
-    <input type="text" id="tongyong" name="music" placeholder="搜索音樂/歌手" style="color:#31c27c">
+    <input type="text" id="tongyong" name="music" placeholder="搜索音樂/歌手" style="color:#31c27c;width:250px;">
     <button><div style="color:#000000">搜索</div></button>
   </div>
   <div class="item">
