--- a/music/1.html
+++ b/music/1.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
     
-    <title>QQ音樂解析</title>
+    <title>Music</title>
 
 
     <!-- Favicon -->
