--- a/music/1.html
+++ b/music/1.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#ffffff">
 <!-- CSS -->
     <link rel="shortcut icon" href="https://hbpoon.github.io/img/favicon.ico">
-	<link href="buttons.css" rel="stylesheet" type="text/css">
+	<link href="https://hbpoon.github.io/css/buttons.css" rel="stylesheet" type="text/css">
     <link href="https://hbpoon.github.io/css/music/APlayer.min.css" rel="stylesheet" type="text/css">
     <link href="https://hbpoon.github.io/css/music/APlayer.min.js" rel="stylesheet" type="text/css"> 
     
