--- a/music/1.html
+++ b/music/1.html
@@ -157,7 +157,7 @@ a:hover,a:visited,a:link{text-decoration:none}
 
 
 
-
+<div class="container">
 <div class="container">
         <div style="font-size: 1px;">&nbsp;</div>
 	        <div id="player3" class="aplayer">
@@ -253,7 +253,7 @@ a:hover,a:visited,a:link{text-decoration:none}
         ap3.init();
     </script>
   
-
+  <h3><div align="left" style="color:#ffffff">ID獲取說明</div></h3>
 
 </div>
 </header>
@@ -268,7 +268,20 @@ a:hover,a:visited,a:link{text-decoration:none}
     </style>  
 
 
-
+<table width="400" border="0">
+  <tr>
+    <td>
+        <div class="box" style="font-size: 13px;color:#888;">
+       <strong>QQ MUSIC</strong><br>
+歌曲:https://y.qq.com/n/yqq/song/<a style="color:#31c27c" href="https://y.qq.com/n/yqq/song/004KBrKG3Uq0t2.html" target="new">004KBrKG3Uq0t</a>.html<br>
+ID:004KBrKG3Uq0t2<br>
+&nbsp;<br>
+<strong>網易雲音樂</strong><br>
+歌曲:https://music.163.com/#/song?id=<a style="color:#ed0802" href="https://music.163.com/#/song?id=556459092" target="new">556459092</a><br>
+ID:556459092<br>
+</td>
+  </tr>
+</table>
 
   
   
