--- a/music/1.html
+++ b/music/1.html
@@ -159,7 +159,7 @@ a:hover,a:visited,a:link{text-decoration:none}
 
 
 <div class="container">
-        
+        <div style="font-size: 1px;">&nbsp;</div>
 	        <div id="player3" class="aplayer">
 	            <pre class="aplayer-lrc-content">
 [00:00.36]作曲 : KENI
@@ -253,7 +253,7 @@ a:hover,a:visited,a:link{text-decoration:none}
         ap3.init();
     </script>
   
-  <h3><div align="left" style="color:#ffffff">ID獲取說明</div></h3>
+ 
 
 </div>
 </header>
