--- a/music/1.html
+++ b/music/1.html
@@ -157,7 +157,10 @@ a:hover,a:visited,a:link{text-decoration:none}
 
 
 
-
+<body>
+<table width="400" border="0">
+  <tr>
+    <td>
 <div class="container">
         <div style="font-size: 1px;">&nbsp;</div>
 	        <div id="player3" class="aplayer">
@@ -253,7 +256,7 @@ a:hover,a:visited,a:link{text-decoration:none}
         ap3.init();
     </script>
   
- 
+  <h3><div align="left" style="color:#ffffff">ID獲取說明</div></h3>
 
 </div>
 </header>
