--- a/music/1.html
+++ b/music/1.html
@@ -156,7 +156,7 @@ a:hover,a:visited,a:link{text-decoration:none}
   <tr>
     <td>
         <div class="box" style="font-size: 12px;color:#888;">
-       <strong>QQ MUSIC</strong><br>
+       <strong>QQ音樂</strong><br>
 歌曲:https://y.qq.com/n/yqq/song/<a style="color:#31c27c" href="https://y.qq.com/n/yqq/song/004KBrKG3Uq0t2.html" target="new">004KBrKG3Uq0t</a>.html<br>
 ID:004KBrKG3Uq0t2<br>
 &nbsp;<br>
