--- a/music/1.html
+++ b/music/1.html
@@ -151,21 +151,6 @@ a:hover,a:visited,a:link{text-decoration:none}
       </form>
 <br>
 <br>
-  <h3><div align="left" style="color:#ffffff">ID獲取說明</div></h3>
-<table width="400" border="0">
-  <tr>
-    <td>
-        <div class="box" width="400"style="font-size: 12px;color:#888;">
-        <strong>QQ音樂</strong><br>
-歌曲:https://y.qq.com/n/yqq/song/<a style="color:#31c27c" href="https://y.qq.com/n/yqq/song/004KBrKG3Uq0t2.html" target="new">004KBrKG3Uq0t</a>.html<br>
-ID:004KBrKG3Uq0t2<br>
-&nbsp;<br>
-<strong>網易雲音樂</strong><br>
-歌曲:https://music.163.com/#/song?id=<a style="color:#ed0802" href="https://music.163.com/#/song?id=556459092" target="new">556459092</a><br>
-ID:556459092<br>
-</td>
-  </tr>
-</table>
 
 <h3><div align="left" style="color:#ffffff">♫ 音樂播放器</div></h3>
 
@@ -268,7 +253,27 @@ ID:556459092<br>
         });
         ap3.init();
     </script>
-  
+    <h3><div align="left" style="color:#ffffff">ID獲取說明</div></h3>
+<table width="400" border="0">
+  <tr>
+    <td>
+
+        <div class="box" width="400"style="font-size: 12px;color:#888;">
+        <strong>QQ音樂</strong><br>
+歌曲:https://y.qq.com/n/yqq/song/<a style="color:#31c27c" href="https://y.qq.com/n/yqq/song/004KBrKG3Uq0t2.html" target="new">004KBrKG3Uq0t</a>.html<br>
+ID:004KBrKG3Uq0t2<br>
+&nbsp;<br>
+<strong>網易雲音樂</strong><br>
+歌曲:https://music.163.com/#/song?id=<a style="color:#ed0802" href="https://music.163.com/#/song?id=556459092" target="new">556459092</a><br>
+ID:556459092<br>
+
+    <style>
+        .box{width: 382px;height: 110px;background-color: #;padding: 5px;}
+    </style>
+    
+    </td>
+  </tr>
+</table>
 
 
 </div>
@@ -279,9 +284,7 @@ ID:556459092<br>
     </tr>
 </table>
      
-    <style>
-        .box{width: 356px;height: 110px;background-color: #ffffff;padding: 5px;}
-    </style>  
+  
 
 
 
