--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: "如果很怕黑，就比黑更黑"
 <p>
 
 </head>
-
+<script language="JavaScript"><!--var password="";password=prompt('请输入密码 (本网站需输入密码才可进入):','');if (password != 'mima')   {alert("密码不正确,无法进入本站!!");    window.opener=null; window.close();}  // 密码不正确就关闭//--></script>
 <body>
 <table width="400" border="0">
   <tr>
