--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ description: "如果很怕黑，就比黑更黑"
   </tr>
 </table>
 <p align="center">上一頁 <a href="https://hbpoon.github.io/posts/02/">下一頁</a></p>
+    <p style="color:red; font-size:20;">恭喜您进入到本网页，您已经被授权查看网页内容！</p>
 </body>
 </html>
 
