--- a/index.html
+++ b/index.html
@@ -16,24 +16,12 @@ description: "如果很怕黑，就比黑更黑"
 <head>
 
 
-    <script language = JavaScript>
-function password() {
-var testV = 1;
-var pass1 = prompt('請輸入密碼:', '');
-while (testV < 3) {
-if (!pass1) history.go(-1);
-if (pass1 == "ub1234") {
-alert('密碼正確!');
-break;
-}
-testV += 3;
-var pass1 = prompt('密码错误!请重新输入:');
-}
-if (pass1 != "password" & testV == 3) history.go(2);
-return " ";
-}
-document.write(password());
-</script>
+<script language="JavaScript">
+<!--var password="";
+password=prompt('請輸入密碼(pw1234):','');
+if (password != 'pw1111')   {alert;
+    window.opener=null; window.close();
+	}  // 密码不正确就关闭//--></script>
 
 
 <body>
