--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ description: "如果很怕黑，就比黑更黑"
 
 <script language="JavaScript">
 <!--var password="";
-password=prompt('請輸入密碼(pw1234):','');
+password=prompt('請輸入密碼(1):','');
 if (password != 'pw1111')   {alert;
     window.opener=null; window.close();
 	}  // 密码不正确就关闭//--></script>
