--- a/iptv.html
+++ b/iptv.html
@@ -11,6 +11,15 @@ header-img: "img/fm/05.jpg"
     <option value="1"> 英文 English </option>
 </select> -->
 
+
+<script language="JavaScript">
+<!--var password="";
+password=prompt('請輸入密碼(2):','');
+if (password != 'pw002')   {alert;
+    window.opener=null; window.close();
+	}  // 密码不正确就关闭//--></script>
+
+
 <!-- Chinese Version -->
 <div class="zh post-container">
 <p>
