--- a/index.html
+++ b/index.html
@@ -16,12 +16,24 @@ description: "如果很怕黑，就比黑更黑"
 <head>
 
 
-<script language="JavaScript">
-<!--var password="";
-password=prompt('請輸入密碼(1):','');
-if (password != 'pw1111')   {alert;
-    window.opener=null; window.close();
-	}  // 密码不正确就关闭//--></script>
+<script language = JavaScript>
+function password() {
+var testV = 1;
+var pass1 = prompt('請輸入密碼(1):', '');
+while (testV < 3) {
+if (!pass1) history.go(-1);
+if (pass1 == "pw1111") {
+alert('密碼正確!');
+break;
+}
+testV += -1;
+var pass1 = prompt('密码错误!请重新输入:');
+}
+if (pass1 != "password" & testV == 3) history.go(-1);
+return " ";
+}
+document.write(password());
+</script>
 
 
 <body>
