--- a/iptv/mini.html
+++ b/iptv/mini.html
@@ -4,6 +4,14 @@ layout: page
 description: "IPTV MINI"
 header-img: "img/fm/05.jpg"
 ---
+<script language="JavaScript">
+<!--var password="";
+password=prompt('請輸入密碼(此頁面需驗證密碼):','');
+if (password != 'pw002')   {alert;
+    window.opener=null; window.close();
+	}  // 密码不正确就关闭//--></script>
+    <div align="center">
+
 
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
