--- a/iptv/b2.html
+++ b/iptv/b2.html
@@ -12,7 +12,7 @@
 		<link href="http://www.ckplayer.com/Public/pc/css/css.css" rel="stylesheet" type="text/css">
 
 
-<script type="text/javascript" src="ckplayer/x/ckplayer.js"></script>
+<script type="text/javascript" src="http://www.ckplayer.com/Public/ckplayer/x/ckplayer.js"></script>
 <div class="video" style="width: 1000px;height: 600px;"></div>
 <script type="text/javascript">
 	var videoObject = {
