--- a/ckplayer/index.html
+++ b/ckplayer/index.html
@@ -39,9 +39,9 @@
 				//debug:true,
 				video:[
 			        ['http://27.148.146.13/chinanet4-live.bestvcdn.com.cn/live/program/live/cctv5phd/2300000/mnf.m3u8', 'video/mp4', '中文标清', 0],
-			        ['http://img.ksbbs.com/asset/Mon_1703/d0897b4e9ddd9a5.mp4', 'video/mp4', '中文高清', 0],
-			        ['http://img.ksbbs.com/asset/Mon_1703/eb048d7839442d0.mp4', 'video/mp4', '英文高清', 0],
-			        ['http://img.ksbbs.com/asset/Mon_1703/d30e02a5626c066.mp4', 'video/mp4', '英文超清', 0]
+			        ['', 'video/mp4', '中文高清', 0],
+			        ['', 'video/mp4', '英文高清', 0],
+			        ['', 'video/mp4', '英文超清', 0]
 			    ]
 			};
 			var player = new ckplayer(videoObject);
