--- a/ckplayer/index.html
+++ b/ckplayer/index.html
@@ -38,7 +38,7 @@
 				//live:true,
 				//debug:true,
 				video:[
-			        ['http://27.148.146.13/chinanet4-live.bestvcdn.com.cn/live/program/live/cctv5phd/2300000/mnf.m3u8', 'video/mp4', '中文标清', 0],
+			        ['rtmp://plays.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4',//视频地址],
 			        ['', 'video/mp4', '中文高清', 0],
 			        ['', 'video/mp4', '英文高清', 0],
 			        ['', 'video/mp4', '英文超清', 0]
