--- a/ckplayer/index.html
+++ b/ckplayer/index.html
@@ -19,43 +19,17 @@
 
 	</head>
 
-	<body>
-		<div id="video" style="width: 100%; height: 400px;max-width: 600px;">
-		</div>
-		<script type="text/javascript" src="ckplayer/ckplayer.js" charset="UTF-8"></script>
-		<script type="text/javascript">
-			var videoObject = {
-				container: '#video', //容器的ID或className
-				variable: 'player', //播放函数名称
-				//loop: true, //播放结束是否循环播放
-				autoplay: false,//是否自动播放
-				poster: 'material/poster.jpg', //封面图片
-				preview: { //预览图片
-					file: ['material/mydream_en1800_1010_01.png', 'material/mydream_en1800_1010_02.png'],
-					scale: 2
-				},
-				//flashplayer:true,
-				//live:true,
-				//debug:true,
-				video:[
-			        ['rtmp://plays.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4',//视频地址],
-			        ['', 'video/mp4', '中文高清', 0],
-			        ['', 'video/mp4', '英文高清', 0],
-			        ['', 'video/mp4', '英文超清', 0]
-			    ]
-			};
-			var player = new ckplayer(videoObject);
-		</script>
-		<p>欢迎使用ckplayer，当前版本：X1，<a href="http://www.ckplayer.com/" target="_blank">官网</a>，<a href="http://www.ckplayer.com/manualX/" target="_blank">帮助手册</a></p>
-		<p><a href="sample/index.html" target="_blank">全功能演示</a></p>
-		<p><a href="sample/iframe.html" target="_blank">使用框架播放演示</p>
-		<p><a href="sample/flashplayer.html" target="_blank">仅flashplayer播放演示</p>
-		<p><a href="sample/h5.html" target="_blank">仅H5播放演示</p>
-		<p><a href="sample/rtmp.html" target="_blank">RTMP播放示例</p>
-		<p><a href="sample/ios.html" target="_blank">在各平台统一播放器风格</p>
-		<p><a href="sample/dm.html" target="_blank">弹幕演示</p>
-		<p><a href="sample/adother.html" target="_blank">单独配置广告，支持角标广告和片头贴片，中插，结束广告，暂停广告</p>	
-		<p><a href="http://www.ckplayer.com/" target="_blank">更多演示</p>
-	</body>
+<script type="text/javascript" src="ckplayer/x/ckplayer.js"></script>
+<div class="video" style="width: 1000px;height: 600px;"></div>
+<script type="text/javascript">
+	var videoObject = {
+		container: '.video',//“#”代表容器的ID，“.”或“”代表容器的class
+		variable: 'player',//该属性必需设置，值等于下面的new chplayer()的对象
+		autoplay:true,//自动播放
+		live:true,//直播视频形式
+		video:'rtmp://live.hkstv.hk.lxdns.com/live/hks'//视频地址
+	};
+	var player=new ckplayer(videoObject);
+</script>
 
 </html>
