--- a/ckplayer/index.html
+++ b/ckplayer/index.html
@@ -27,7 +27,7 @@
 		variable: 'player',//该属性必需设置，值等于下面的new chplayer()的对象
 		autoplay:true,//自动播放
 		live:true,//直播视频形式
-		video:'rtmp://live.hkstv.hk.lxdns.com/live/hks'//视频地址
+		video:'rtmp://plays.gztv.com/live/23436_dc2089877e7111e892905cb9018cf0d4'//视频地址
 	};
 	var player=new ckplayer(videoObject);
 </script>
