--- a/iptv/beta2.html
+++ b/iptv/beta2.html
@@ -27,7 +27,7 @@
   <tr>
     <td width="1280" height="720" colspan="3">
 <video id="my_video_1" class="video-js vjs-default-skin fillWidth" controls autoplay="autoplay" width="1280" height="720"data-setup='{}' >
-<source src="http://223.110.242.130:6610/gitv/live1/G_CCTV-5-CQ/1.m3u8" type="application/x-mpegURL">
+<source src="http://116.199.5.51:8114/hls/Fsv_chan_hls_se_idx=31&FvSeid=1&Fsv_ctype=LIVES&Fsv_otype=1&Provider_id=0&Pcontent_id=8114.m3u8" type="application/x-mpegURL">
     
     </td>
     <td rowspan="3"><iframe name="tv" width="400" height="820" src="https://m.tvmao.com/program/GDTV/GDTV2" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="auto" __idm_frm__="81"></iframe></td>
