--- a/music/2.html
+++ b/music/2.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>固定在网页底部的HTML5音乐播放器插件代码</title>
+<title>Music</title>
 
 
 
 <!-- CSS -->
     <link rel="shortcut icon" href="https://hbpoon.github.io/img/favicon.ico">
     <link href="https://hbpoon.github.io/css/buttons.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="css/audio.css">
+<link rel="stylesheet" type="text/css" href="https://hbpoon.github.io/music/player/css/audio.css">
 
 
 
@@ -343,6 +343,8 @@ $(function(){
 });
 
 </script>
+
+
 
 </div>
 </html>
