--- a/music/2.html
+++ b/music/2.html
@@ -260,8 +260,8 @@ a:hover,a:visited,a:link{text-decoration:none}
 	</div>
 </body>
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/audio.js"></script>
+<script type="text/javascript" src="https://hbpoon.github.io/music/player/js/jquery.min.js"></script>
+<script type="text/javascript" src="https://hbpoon.github.io/music/player/js/audio.js"></script>
 <script type="text/javascript">
 $(function(){
 
@@ -269,52 +269,52 @@ $(function(){
 		{
 			'cover' : 'https://v1.itooi.cn/netease/pic?id=549354758',
 			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=549354758',
-			'title' : '01&nbsp;Serrini樹妮妮 - ～趣緻的響鈴～Drunk Text Me'
+			'title' : '01 Serrini樹妮妮 - ～趣緻的響鈴～Drunk Text Me'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/tencent/pic?id=001xeNaH2HfTSr',
 			'src' : 'https://v1.itooi.cn/tencent/url?quality=320&id=001xeNaH2HfTSr',
-			'title' : '02&nbsp;安俊豪 - 沉淪'
+			'title' : '02 安俊豪 - 沉淪'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/tencent/pic?id=000O74HP4W9iMq',
 			'src' : 'https://v1.itooi.cn/tencent/url?quality=320&id=000O74HP4W9iMq',
-			'title' : '03&nbsp;許靖韻 - 不如告白'
+			'title' : '03 許靖韻 - 不如告白'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/netease/pic?id=1315568574',
 			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=1315568574',
-			'title' : '04&nbsp;Mr.16羅雋永/Simyee陳芯怡 - Night Star'
+			'title' : '04 Mr.16羅雋永/Simyee陳芯怡 - Night Star'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/netease/pic?id=400161345',
 			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=400161345',
-			'title' : '05&nbsp;李幸倪 - 未來'
+			'title' : '05 李幸倪 - 未來'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/netease/pic?id=32958483',
 			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=32958483',
-			'title' : '06&nbsp;陳柏宇 - 回眸一笑'
+			'title' : '06 陳柏宇 - 回眸一笑'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/netease/pic?id=504695223',
 			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=504695223',
-			'title' : '07&nbsp;Mr.16羅雋永 - 黑白的我'	
+			'title' : '07 Mr.16羅雋永 - 黑白的我'	
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/netease/pic?id=522320559',
 			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=522320559',
-			'title' : '08&nbsp;Fabel - ～夢花鏡影'
+			'title' : '08 Fabel - ～夢花鏡影'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/tencent/pic?id=004KBrKG3Uq0t2',
 			'src' : 'https://v1.itooi.cn/tencent/url?quality=320&id=004KBrKG3Uq0t2',
-			'title' : '09&nbsp;動態回顧'
+			'title' : '09 動態回顧'
 		},
 		{
 			'cover' : 'https://v1.itooi.cn/netease/pic?id=34497542',
 			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=34497542',
-			'title' : '10&nbsp;Mr.16羅雋永 - 黑白的我'		
+			'title' : '10 Mr.16羅雋永 - 黑白的我'		
 			
 		}
 	];
