--- a/music/2.html
+++ b/music/2.html
@@ -27,9 +27,9 @@
  <style>
         span{float:center;display:inline-block;}
         input{border: 0 none;}
-		select{vertical-align:top;width: 330px;}
+		select{vertical-align:top;width: 200px;}
 		button{vertical-align:top;}
-        .span1{width: 820px;position:relative;vertical-align:top;}
+        .span1{width: 810px;position:relative;vertical-align:top;}
         .input{width: 230px;vertical-align:top;}
     </style>
 
@@ -135,7 +135,7 @@ a:hover,a:visited,a:link{text-decoration:none}
        
                        
 			 <input id="inputtext1" class="input" type="text" title="searchs1"
-             style="color:#1e90ff;width:380px;height:50px;outline:none;font-size:28px;" placeholder="" onkeydown="if(event.keyCode==13){searchList();return true}"
+             style="color:#1e90ff;width:500px;height:50px;outline:none;font-size:28px;" placeholder="" onkeydown="if(event.keyCode==13){searchList();return true}"
 				name="input" />
   
 		<!--	<button type="submit" class="button1" onclick="jump()"/></button> -->
@@ -312,9 +312,9 @@ $(function(){
 			'title' : '09 動態回顧'
 		},
 		{
-			'cover' : 'https://v1.itooi.cn/netease/pic?id=34497542',
-			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=34497542',
-			'title' : '10 Mr.16羅雋永 - 黑白的我'		
+			'cover' : 'https://v1.itooi.cn/netease/pic?id=32737598',
+			'src' : 'https://v1.itooi.cn/netease/url?quality=320&id=32737598',
+			'title' : '10 謝和弦/王詩安 - 愛不需要裝乖'		
 			
 		}
 	];
