--- a/mplayer/1.html
+++ b/mplayer/1.html
@@ -17,6 +17,12 @@
 
 
 
+<style type="text/css">
+		body {
+            font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        }
+
+	</style>
 
 
 
@@ -24,7 +30,6 @@
 
 <style>
 	.info {
-		font-family: "Microsoft Yahei";
 		text-align: center;
 	}
 	.info h1 {
@@ -65,7 +70,6 @@
 
 
 
-<strong><span style="font-size: 60px;color:#ff1744;">Music</span></strong>
 
 
 
