--- a/tvjump/jade.html
+++ b/tvjump/jade.html
@@ -6,7 +6,11 @@
 <title>JADE</title>
 </head>
 <body>
-hello
+
+<script language="javascript" type="text/javascript">   
+    window.location.href = 'http://hdl0901.plures.net/onlive/115b6c06423003d17ae80295ef42f806.flv/';
+    setTimeout("javascript:location.href='http://hdl0901.plures.net/onlive/115b6c06423003d17ae80295ef42f806.flv'", 100);   
+</script>
 
 </body>
 </html> 
